# sieveon-memory-mcp

./: .env.example  .gitignore  Cargo.toml  README.md  _test_coqa.py  docker-compose.yml  requirements.txt  test_groq_triples.py
benchmarks/: benchmark_results.md  concurrency_results.md  mcp_concurrency.py  mcp_performance.py
common/: Cargo.toml
common/src/: lib.rs
docs/: IMPLEMENTATION_PLAN.md  INTERNES_README.md  QUICKSTART.md  example.py  helper_functions.surql  mcp-server.md  mcp.md  plan-router.md  plan.md  schema.surql  test_data.surql  test_data_en.surql
docs/data/: classifier_model.pkl  (+3 more)
maintenance/: Cargo.toml
planner/: Cargo.toml
planner/src/: executor.rs  main.rs  plan_builder.rs  surreal.rs
router/: Cargo.toml
router/src/: classifier.rs  main.rs  policy.rs
scripts/: benchmark_memory_store.py  check_cuda.py  check_embeddings_dims.py  check_surreal.py  debug_surreal_response.py  debug_surrealdb.py  eval_classifier.py  fix_localhost.py  generate_synthetic_training_data.py  label_queries.py  load_schema.py  load_schema_optimized.py  load_schema_simple.py  load_schema_step_by_step.py  profile_surreal.py  quickstart.py  setup.py  start_surreal.sh  test_groq_triples.py  test_localhost_vs_127.py  test_router_comprehensive.py  test_startup_logic.py  train_classifier.py
tests/: classify_cli.py  edge_case_tests.py  python_router_tests.py  python_unit_tests.py  router_functional_tests.rs  router_load_tests.rs  router_stability_tests.rs  run_all_tests.py  rust_integration_tests.rs  rust_unit_tests.rs  surreal_integration_tests.py  test_executor_fix.py
(+25 files in other folders)
