[package]
name = "strata-planner"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["query"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strata-common = { path = "../common" }
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }