[package]
name = "strata-router"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["query"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strata-common = { path = "../common" }

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"