[package]
name = "strata-router"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["query"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strata-common = { path = "../common" }
regex = "1.10"
tiktoken = "3"

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"